Se modifico el archivo jsons_utils para quitar el nombre del modulo y el nombre de la tabla sqlserver en los archivos JSON

--- a/archivos_json/SMGAREASUBAREA.json
+++ b/archivos_json/SMGAREASUBAREA.json
@@ -1,6 +1,5 @@
 {
-    "doctype": "employee_group",
-    "module": "Setup",
+    "doctype": "Department",
     "data": [
         {
             "areacodigo": "10",
